# geospatial_coding_task

./: Dockerfile  README.md  main.py  main_test.py  project.toml  pyproject.toml  requirements.txt  run_flask.py  shapes.json
